@@ -1924,9 +1924,7 @@ void _edje_entry_select_allow_set(Edje_Real_Part *rp, Eina_Bool allow);
 Eina_Bool _edje_entry_select_allow_get(const Edje_Real_Part *rp);
 void _edje_entry_select_abort(Edje_Real_Part *rp);
 void _edje_entry_viewport_object_set(Edje_Real_Part *rp, Evas_Object *obj);
-#ifdef HAVE_ECORE_IMF
-Ecore_IMF_Context *_edje_entry_imf_context_get(Edje_Real_Part *rp);
-#endif
+void *_edje_entry_imf_context_get(Edje_Real_Part *rp);
 Eina_Bool _edje_entry_cursor_next(Edje_Real_Part *rp, Edje_Cursor cur);
 Eina_Bool _edje_entry_cursor_prev(Edje_Real_Part *rp, Edje_Cursor cur);
 Eina_Bool _edje_entry_cursor_up(Edje_Real_Part *rp, Edje_Cursor cur);
