@@ -355,3 +355,12 @@
           edje_object_part_text_input_panel_imdata_set/get
           edje_object_part_text_input_panel_return_key_type_set/get
           edje_object_part_text_input_panel_return_key_disabled_set/get
+
+2012-02-20  WooHyun Jung
+
+        * Change API names from edje_object_markup_filter_callback_{add,del,del_full}.
+        to edje_object_text_markup_filter_callback_{add,del,del_full}.
+
+2012-02-24  Jihoon Kim
+
+	* add edje_object_part_text_imf_context_get for getting Ecore_IMF_Context handle in edje text object
